chore: lint and fix warnings